143-wallet: recommend update recommend ui
RootCause: no

Solution：add horizontal divider,modify text size

Ticket: LEUIAPP-1151 LEUIAPP-1013

Change-Id: I8c54ce2d0496cd9633ec233a3a72e00a44a787a0
Signed-off-by: liuliang6 <liuliang6@le.com>

--- a/LetvWallet/res/layout/main_recommend_cardview_c.xml
+++ b/LetvWallet/res/layout/main_recommend_cardview_c.xml
@@ -15,13 +15,14 @@
             android:id="@+id/card_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/Recommend_Card_Title"
+            android:textAppearance="@style/Recommend_Card_Content_Title"
             android:layout_marginBottom="2dp"
             />
         <TextView
             android:id="@+id/card_body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:lineSpacingMultiplier="1.3"
             android:textAppearance="@style/Recommend_Card_SubTitle"
             />
     </LinearLayout>
