--- a/LetvWallet/res/layout/main_recommend_cardview_d.xml
+++ b/LetvWallet/res/layout/main_recommend_cardview_d.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Recommend_Card_SubTitle"
+        android:lineSpacingMultiplier="1.3"
         />
     <com.letv.shared.widget.BorderedRoundedCornersImageView
         android:id="@+id/content_img"
