143-wallet: String: 更新钱包字符串英文翻译
Ticket: LEUIAPP-1169

Root cause : no

Solution: update string in values

Change-Id: Ibac89fd7d70182dea17c46e1db282b874652e34a
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values/strings_account.xml
+++ b/LePay/res/values/strings_account.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="account_verify_acitivtiy_title">Real name verification</string>
-    <string name="account_verify_input_real_name">Real name</string>
-    <string name="account_verify_input_id_no">ID Card</string>
-    <string name="account_verify_input_bank_no">Add bank card</string>
-    <string name="account_verify_available_bank_list">Support bank</string>
-    <string name="account_verify_input_mobile_no">Input phone registered with bank</string>
+    <string name="account_verify_acitivtiy_title">Real-name authentication</string>
+    <string name="account_verify_input_real_name">Enter full name</string>
+    <string name="account_verify_input_id_no">Enter ID card number</string>
+    <string name="account_verify_input_bank_no">Enter bank card number</string>
+    <string name="account_verify_available_bank_list">View supported banks</string>
+    <string name="account_verify_input_mobile_no">Enter bound mobile number</string>
     <string name="account_verify_input_sms_code">Enter code</string>
-    <string name="account_verify_get_sms_code">Resend SMS code</string>
+    <string name="account_verify_get_sms_code">Get verification code</string>
     <string name="account_verify_btn_comfire_update">Next</string>
-    <string name="account_agreement_tips">I have read the %1$s, and have understood the above, and bear the associated risks.</string>
-    <string name="account_agreement">Payment channel service agreement </string>
-    <string name="account_verify_name_invalid">Please enter a valid word</string>
-    <string name="account_verify_id_num_invalid">Please enter a valid ID number</string>
-    <string name="account_verify_card_num_invalid">Please enter a valid card number</string>
-    <string name="account_verify_card_bank_not_support">The bank is not supported temporarily</string>
-    <string name="account_verify_phone_invalid">Please enter a valid phone number</string>
-    <string name="account_verify_sms_invalid">Verification code error or expired</string>
+    <string name="account_agreement_tips">I acknowledge that I have read, understand the terms of %1$s and agree to bear all possible risks relating to this agreement.</string>
+    <string name="account_agreement">Payment Services Agreement</string>
+    <string name="account_verify_name_invalid">Invalid name format</string>
+    <string name="account_verify_id_num_invalid">Invalid ID number format</string>
+    <string name="account_verify_card_num_invalid">Invalid bank card number format</string>
+    <string name="account_verify_card_bank_not_support">This bank is not supported</string>
+    <string name="account_verify_phone_invalid">Invalid mobile number format</string>
+    <string name="account_verify_sms_invalid">Incorrect or invalid verification code</string>
     <string name="account_verify_countdoun_s">S</string>
-    <string name="account_verify_fail">Failed to verify real name</string>
-    <string name="account_verify_please_check_agreement">Please tick the agreement</string>
+    <string name="account_verify_fail">Real-name authentication failed</string>
+    <string name="account_verify_please_check_agreement">Please accept the agreement</string>
     <string name="account_card_type_debit">Debit card</string>
     <string name="account_card_type_credit">Credit card</string>
     <string name="account_card_type_passbook">Passbook</string>
     <string name="account_card_type_other">Others</string>
     <string name="account_card_add_bankcard">Add card</string>
-    <string name="account_card_title">Card</string>
+    <string name="account_card_title">Band card</string>
     <string name="account_card_menu_title">Help</string>
-    <string name="account_card_item_click_tip">Temporarily unable to operate, please check help</string>
+    <string name="account_card_item_click_tip">The operation failed. Please refer to Help.</string>
     <string name="account_verify_sms_send_fail">The SMS code is getting too frequent, please try again later</string>
     <string name="account_card_list_empty">No card</string>
 
