--- a/LetvWallet/res/values/string_me.xml
+++ b/LetvWallet/res/values/string_me.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="home_tab_me">Me</string>
+    <string name="home_tab_me">My</string>
     <string name="me_real_name_authentication">Real name verification</string>
-    <string name="me_real_name_not_authentication">Not real name verified</string>
-    <string name="me_tips_title">Verify your name</string>
-    <string name="me_tips_content">More convenient with real name verification</string>
-    <string name="me_vip_level">Membership Level</string>
+    <string name="me_real_name_not_authentication">You real name is not authenticated</string>
+    <string name="me_tips_title">Authenticate</string>
+    <string name="me_tips_content">Complete real-name authentication for more services</string>
+    <string name="me_vip_level">Membership level</string>
     <string name="me_lelehua">Lelehua</string>
-    <string name="me_lelehua_payment_amount">Payment amount</string>
-    <string name="me_usr_feedback">User feedback</string>
-    <string name="me_lelehua_not_open">Account not open</string>
-    <string name="me_create_account_failed">Failed to open account！</string>
+    <string name="me_lelehua_payment_amount">Amount repayable</string>
+    <string name="me_usr_feedback">Feedback</string>
+    <string name="me_lelehua_not_open">Not enabled</string>
+    <string name="me_create_account_failed">Failed to open account</string>
     <string name="me_usr_nologin">Not logged in</string>
 
 </resources>
