--- a/LePay/res/values/styles.xml
+++ b/LePay/res/values/styles.xml
@@ -42,6 +42,8 @@
         <item name="android:textColor">#262626</item>
         <item name="android:textSize">16sp</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:maxLines">1</item>
     </style>
 
     <style name="SettingListItemFlagTextStyle">
