131-Lepay: Account : 实名认证添加金融协议
Ticket: LEUIAPP-1169

Root cause : no

Solution: 添加金融协议

Change-Id: I565f07daee3df31cd2381c352425acaeea752e11
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values/strings_account.xml
+++ b/LePay/res/values/strings_account.xml
@@ -10,7 +10,8 @@
     <string name="account_verify_get_sms_code">Get verification code</string>
     <string name="account_verify_btn_comfire_update">Next</string>
     <string name="account_agreement_tips">I acknowledge that I have read, understand the terms of %1$s and agree to bear all possible risks relating to this agreement.</string>
-    <string name="account_agreement">Payment Services Agreement</string>
+    <string name="account_agreement_le_financial">LeEco financial platform services agreement&#160;</string>
+    <string name="account_agreement_le_paychannel">&#160;Payment Services Agreement</string>
     <string name="account_verify_name_invalid">Invalid name format</string>
     <string name="account_verify_id_num_invalid">Invalid ID number format</string>
     <string name="account_verify_card_num_invalid">Invalid bank card number format</string>
