--- a/LePay/res/values-zh-rCN/strings_account.xml
+++ b/LePay/res/values-zh-rCN/strings_account.xml
@@ -10,7 +10,8 @@
     <string name="account_verify_get_sms_code">获取验证码</string>
     <string name="account_verify_btn_comfire_update">下一步</string>
     <string name="account_agreement_tips">本人已阅读%1$s，且已理解上述内容，并承担相关风险。</string>
-    <string name="account_agreement">《支付通道服务协议》</string>
+    <string name="account_agreement_le_financial">《乐视金融平台服务协议》</string>
+    <string name="account_agreement_le_paychannel">《乐视支付通道服务协议》</string>
     <string name="account_verify_name_invalid">姓名格式错误</string>
     <string name="account_verify_id_num_invalid">身份证格式错误</string>
     <string name="account_verify_card_num_invalid">卡号格式错误</string>
