--- a/LetvWallet/res/layout/main_tab_my.xml
+++ b/LetvWallet/res/layout/main_tab_my.xml
@@ -17,7 +17,7 @@
             android:layout_width="34dp"
             android:layout_height="34dp"
             android:padding="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:src="@drawable/btn_setting"
             android:layout_alignParentRight="true" />
 
@@ -72,32 +72,11 @@
     <LinearLayout
         android:id="@+id/viewTips"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#FFFAD1"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/me_top_info_horizontal_padding"
-        android:paddingRight="@dimen/me_top_info_horizontal_padding"
-        android:visibility="gone">
-
-        <TextView
-            style="@style/MeTipsTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1.0"
-            android:text="@string/me_tips_content" />
-
-        <TextView
-            style="@style/MeTipsTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="10dp"
-            android:drawableRight="@drawable/me_tips_right_arrow"
-            android:gravity="center_vertical"
-            android:scaleType="fitXY"
-            android:text="@string/me_tips_title" />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:divider="@drawable/me_tips_spacer_medium"
+        android:showDividers="middle"
+        android:dividerPadding="5dp"/>
 
     <TextView
         android:id="@+id/tvBills"
@@ -158,7 +137,7 @@
             style="@style/MeListItemTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/me_list_item_height"
-            android:text="@string/me_lelehua_payment_amount" />
+            android:text="@string/me_lelehua_quick_repayment" />
 
         <TextView
             android:id="@+id/tvPayAmount"
@@ -175,7 +154,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/me_list_item_height"
         android:layout_marginTop="@dimen/me_list_item_divider_space"
-        android:visibility="visible"
         android:text="@string/me_usr_feedback" />
 
 </LinearLayout>
