143-wallet: mainactivity-MeFragment: 在我的tab页添加用户反馈入口
Ticket: LEUIAPP-279

Root cause: 无

Solution: 无

Change-Id: Ibfbc89f78281b1c27dc7d2971ddef3102b80314e
Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

--- a/LetvWallet/res/layout/main_tab_my.xml
+++ b/LetvWallet/res/layout/main_tab_my.xml
@@ -175,7 +175,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/me_list_item_height"
         android:layout_marginTop="@dimen/me_list_item_divider_space"
-        android:visibility="gone"
+        android:visibility="visible"
         android:text="@string/me_usr_feedback" />
 
 </LinearLayout>
