143-wallet: update eui_support_v6.0_20170303.aar
Ticket: LEUIAPP-1411
Solution:
替换aar包，alertdialog主题style引用新的aar包

Change-Id: I7f19bacbef4c322706e5e33ae5a65558ea2749a7
Signed-off-by: huhongbin <huhongbin@le.com>

--- a/LetvWalletCommon/res/values/styles.xml
+++ b/LetvWalletCommon/res/values/styles.xml
@@ -41,7 +41,7 @@
         <item name="android:fontFamily">helve-neue</item>
     </style>
 
-    <style name="Wallet.Actionbar" parent="@style/Widget.Material.ActionBar.Leui">
+    <style name="Wallet.Actionbar" parent="@style/ThemeOverlay.Eui.ActionBar">
         <item name="titleTextColor">@color/wallet_actionBar_titleTv_color</item>
         <item name="titleTextAppearance">@style/Wallet.Toolbar.Title</item>
     </style>
