143-wallet: String: 更新钱包字符串英文翻译
Ticket: LEUIAPP-1169

Root cause : no

Solution: update string in values; 绑卡界面跳转绑手机号添加toast提示；

Change-Id: Ie30e35a2fd6c2c274e275a3f46508ab9903f22b3
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values/strings_account.xml
+++ b/LePay/res/values/strings_account.xml
@@ -31,5 +31,6 @@
     <string name="account_card_item_click_tip">The operation failed. Please refer to Help.</string>
     <string name="account_verify_sms_send_fail">The SMS code is getting too frequent, please try again later</string>
     <string name="account_card_list_empty">No card</string>
-
+    <string name="account_card_no_phone">The service needs to bind the phone number</string>
+    <string name="account_card_unavailable">Failed to open account, please contact customer service.</string>
 </resources>
