--- a/LePay/res/values-zh-rCN/strings_account.xml
+++ b/LePay/res/values-zh-rCN/strings_account.xml
@@ -31,6 +31,7 @@
     <string name="account_card_item_click_tip">暂时无法操作，请查看帮助</string>
     <string name="account_verify_sms_send_fail">验证码获取过于频繁，请稍后重试</string>
     <string name="account_card_list_empty">暂无银行卡</string>
-
+    <string name="account_card_no_phone">该服务需要绑定手机号</string>
+    <string name="account_card_unavailable">开户失败，请联系客服</string>
 
 </resources>
