--- a/LetvWallet/res/layout/main_tab_my.xml
+++ b/LetvWallet/res/layout/main_tab_my.xml
@@ -116,7 +116,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:gravity="right"/>
+            android:gravity="right"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_marginLeft="5dp"/>
     </LinearLayout>
 
     <ImageView
@@ -145,7 +148,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:gravity="right" />
+            android:gravity="right"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_marginLeft="5dp"/>
     </LinearLayout>
 
     <TextView
