143-wallet: 增加有π 快捷入口，金额显示
Ticket: LEUIAPP-269

Change-Id: I187a4d626ca609597c6d3b66f549389e05b20a60
Signed-off-by: zhuchuntao <zhuchuntao@le.com>

--- a/LetvWallet/res/layout/main_tab_wallet.xml
+++ b/LetvWallet/res/layout/main_tab_wallet.xml
@@ -9,7 +9,7 @@
         android:id="@+id/wallet_top_layout"
         android:layout_marginTop="6dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="74dip"
         android:background="@drawable/rounded_rectangle_white"
         android:paddingBottom="12dp"
         android:paddingTop="10dp"
