--- a/LetvWallet/res/values-zh-rCN/string_main.xml
+++ b/LetvWallet/res/values-zh-rCN/string_main.xml
@@ -8,4 +8,5 @@
     <string name="main_recommend_error_no_network">无网络，请检查你的网络!</string>
     <string name="main_recommend_error_network">服务器连接异常，请稍后重试!</string>
     <string name="main_recommend_no_data">暂无内容</string>
+    <string name="main_top_lelehua_amount">￥%1$S</string>
 </resources>
