--- a/LePay/res/layout/lepay_channel_item.xml
+++ b/LePay/res/layout/lepay_channel_item.xml
@@ -1,57 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:leui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/lepay_channel_icon_iv"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_gravity="left|center_vertical"
-        android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha" />
+    android:background="@drawable/lepay_channel_item_selected">
 
     <LinearLayout
-        android:id="@+id/lepay_channel_head_ll"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginLeft="@dimen/padding_default"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:id="@+id/ll_item_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/padding_default"
+        android:paddingRight="@dimen/padding_default">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/lepay_channel_icon_iv"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="left|center_vertical"
+            android:background="@drawable/lepay_channel_item_default_icon" />
+
+        <LinearLayout
+            android:id="@+id/lepay_channel_head_ll"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
+            android:layout_marginLeft="@dimen/padding_default"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/lepay_channel_title_tv"
+                    style="@style/TextAppearance.LePay.ChannelListItemLabel"
+                    android:layout_centerVertical="true" />
+
+                <com.letv.wallet.online.ui.LePayTagFlowLayout
+                    android:id="@+id/lepay_channel_tag_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="6dp"
+                    android:layout_toRightOf="@+id/lepay_channel_title_tv"
+                    android:visibility="gone"
+                    leui:singleLine="true" />
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/lepay_channel_title_tv"
-                style="@style/TextAppearance.LePay.ChannelListItemLabel"
-                android:layout_centerVertical="true" />
-
-            <com.letv.wallet.online.ui.LePayTagFlowLayout
-                android:id="@+id/lepay_channel_tag_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="6dp"
-                android:layout_toRightOf="@+id/lepay_channel_title_tv"
-                android:visibility="gone"
-                leui:singleLine="true" />
-        </RelativeLayout>
+                android:id="@+id/lepay_channel_info_tv"
+                style="@style/TextAppearance.LePay.ChannelListItemContent"
+                android:layout_marginTop="2dp"
+                android:visibility="gone" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/lepay_channel_info_tv"
+            android:id="@+id/lepay_channel_sub_title_tv"
             style="@style/TextAppearance.LePay.ChannelListItemContent"
-            android:layout_marginTop="2dp"
+            android:layout_gravity="right|center_vertical"
             android:visibility="gone" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/lepay_channel_sub_title_tv"
-        style="@style/TextAppearance.LePay.ChannelListItemContent"
-        android:layout_gravity="right|center_vertical"
-        android:visibility="gone" />
-
-</LinearLayout>
+    <View
+        android:id="@+id/cover_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/divider_width"
+        android:layout_marginTop="@dimen/divider_width"
+        android:background="@color/half_transparent" />
+</FrameLayout>
