--- a/LetvWallet/res/layout/main_recommend_cardview_f_item.xml
+++ b/LetvWallet/res/layout/main_recommend_cardview_f_item.xml
@@ -15,6 +15,8 @@
         app:corner_radius="2dp"
         app:border_width="0dp"
         app:round_background="true"
+        android:adjustViewBounds="true"
+        android:scaleType="fitEnd"
         />
     <TextView
         android:id="@+id/content_title"
@@ -23,6 +25,7 @@
         android:gravity="center"
         android:layout_marginTop="4dip"
         android:lines="1"
+        android:ellipsize="end"
         android:textAppearance="@style/Recommend_Card_F_Item_Text"
         />
 
