143-wallet: Account: 实名认证页面提供我的乐视使用
Ticket: LEUIAPP-1173

Root cause : no

Solution: no

Change-Id: I0df8372e077c5de1c7d1b35e5f50beb35c0953d3
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values-zh-rCN/strings_account.xml
+++ b/LePay/res/values-zh-rCN/strings_account.xml
@@ -33,5 +33,6 @@
     <string name="account_card_list_empty">暂无银行卡</string>
     <string name="account_card_no_phone">该服务需要绑定手机号</string>
     <string name="account_card_unavailable">开户失败，请联系客服</string>
+    <string name="account_verify_menu_skip">跳过</string>
 
 </resources>
