--- a/LePay/res/layout/account_verify_activity.xml
+++ b/LePay/res/layout/account_verify_activity.xml
@@ -142,6 +142,7 @@
             style="@style/LargeButton.SectionBase"
             android:text="@string/account_verify_btn_comfire_update"
             android:enabled="false"
+            android:theme="@style/AccountVerifyTheme"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="50dp"/>
 
@@ -157,6 +158,7 @@
                 android:id="@+id/checkAgreement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:theme="@style/AccountVerifyTheme"
                 android:checked="true"/>
             <TextView
                 android:id="@+id/tvAgreement"
