143-wallet: main：添加火车票入口；所有订单列表添加web订单详情跳转
Ticket:LEUIAPP-270

Root cause:无

Solution: 订单列表item的jump_params为http开头表示为网络订单，跳转响应web页面

Change-Id: Iad44282cb67612b83041dcf7023b6127e67119ba
Signed-off-by: Zhang Huancheng <zhanghuancheng@le.com>

--- a/LetvWallet/res/values-zh-rCN/string_order.xml
+++ b/LetvWallet/res/values-zh-rCN/string_order.xml
@@ -11,6 +11,7 @@
     <string name="total_order_status_completed">已完成</string>
     <string name="total_order_status_canceled">已取消</string>
     <string name="total_order_detail_fail_prom">暂无订单详情</string>
+    <string name="total_order_order_detail">订单详情</string>
     <string name="total_order_empty_no_record">暂无订单</string>
     <string name="total_order_no_sn">编号: %1$s</string>
     <string name="total_order_list_hearder_this_month">本月</string>
