131-wallet: LePay 解决激活成功不支付回来数据未刷新问题
Ticket: LEUIAPP-1593

Root cause: 跳转激活直接调起支付这个流程中，支付失败后没有刷新支付列表数据，由于优化调起支付体验导致的问题

Solution: 如果是去激活并且返回支付失败时去更新支付列表数据
	  支付列表和用户是否已支付选择的弹框更改为点击返回键不可关闭
	  删除清单文件重复类的定义

Change-Id: Ibd9894cec84c17555dd4d09bf9546291030d07a7
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LetvWalletCommon/res/values/styles.xml
+++ b/LetvWalletCommon/res/values/styles.xml
@@ -50,7 +50,7 @@
         <item name="navigationIcon">@drawable/ic_wallet_action_back</item>
     </style>
 
-    <style name="Wallet.Toolbar.Title" parent="@*android:style/TextAppearance">
+    <style name="Wallet.Toolbar.Title" parent="@android:style/TextAppearance">
         <item name="android:background">@color/wallet_toolbar_titleBg_color</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/wallet_toolbar_titleTv_color</item>
