--- a/LetvWallet/res/layout/main_recommend_cardview_f_item.xml
+++ b/LetvWallet/res/layout/main_recommend_cardview_f_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="bottom"
     >
     <com.letv.shared.widget.BorderedRoundedCornersImageView
