--- a/LetvWallet/res/layout/main_tab_recommend.xml
+++ b/LetvWallet/res/layout/main_tab_recommend.xml
@@ -13,6 +13,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         />
 </in.srain.cube.views.ptr.PtrClassicFrameLayout>
