--- a/LetvWallet/res/values/theme.xml
+++ b/LetvWallet/res/values/theme.xml
@@ -23,6 +23,7 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="colorPrimary">@color/movieColorPrimary</item>
         <item name="colorPrimaryDark">@color/movieColorPrimary</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="MovieTheme.MoviePhotoGallery" parent="MovieTheme.MovieDetail">
