143-wallet: String:更改登录超时提示文案，添加实名认证成功文案；
Ticket: LEUIAPP-1636

Root cause : no

Solution: update string;

Change-Id: Ided69620fa3384387539a70b904989bd13e5af35
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values-zh-rCN/strings_account.xml
+++ b/LePay/res/values-zh-rCN/strings_account.xml
@@ -34,5 +34,6 @@
     <string name="account_card_no_phone">该服务需要绑定手机号</string>
     <string name="account_card_unavailable">开户失败，请联系客服</string>
     <string name="account_verify_menu_skip">跳过</string>
-    <string name="account_login_expired">当前登录状态已失效，请重新登录</string>
+    <string name="account_login_expired">登录失效，请重新登录</string>
+    <string name="account_verify_success">实名认证成功</string>
 </resources>
