--- a/LePay/res/values/strings_account.xml
+++ b/LePay/res/values/strings_account.xml
@@ -34,5 +34,6 @@
     <string name="account_card_no_phone">The service needs to bind the phone number</string>
     <string name="account_card_unavailable">Failed to open account, please contact customer service.</string>
     <string name="account_verify_menu_skip">Skip</string>
-    <string name="account_login_expired">The current logon state is invalid. please log in again</string>
+    <string name="account_login_expired">Login failed, please sign in again</string>
+    <string name="account_verify_success">Verified success</string>
 </resources>
