--- a/LePay/res/layout/lepay_channel_view.xml
+++ b/LePay/res/layout/lepay_channel_view.xml
@@ -1,102 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lepay_channel_container"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/pay_channel_v_height">
+    android:layout_height="@dimen/pay_channel_v_height"
+    android:background="@drawable/corners"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/pay_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="18dp"
+        android:layout_marginLeft="@dimen/margin_default"
+        android:layout_marginRight="@dimen/margin_default"
+        android:layout_marginTop="18dp"
+        android:textColor="@color/channel_list_tv_primary_color"
+        android:textSize="16sp" />
+
+    <View
+        style="@style/Divider_HorizontalLine_Style"
+        android:layout_marginLeft="@dimen/margin_default"
+        android:layout_marginRight="@dimen/margin_default" />
 
     <LinearLayout
-        android:id="@+id/lepay_channel_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/corners"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_marginLeft="@dimen/margin_default"
+        android:layout_marginRight="@dimen/margin_default"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp">
 
         <TextView
-            android:id="@+id/pay_title_tv"
+            android:id="@+id/pay_price_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="18dp"
-            android:layout_marginLeft="@dimen/margin_default"
-            android:layout_marginRight="@dimen/margin_default"
-            android:layout_marginTop="18dp"
-            android:textColor="@color/channel_list_tv_primary_color"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@string/lepay_payment_price_label"
+            android:textColor="@color/lepay_pay_price_tv_color"
             android:textSize="16sp" />
 
-        <View
-            style="@style/Divider_HorizontalLine_Style"
-            android:layout_marginLeft="@dimen/margin_default"
-            android:layout_marginRight="@dimen/margin_default" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_default"
-            android:layout_marginRight="@dimen/margin_default"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp">
-
-            <TextView
-                android:id="@+id/pay_price_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@string/lepay_payment_price_label"
-                android:textColor="@color/lepay_pay_price_tv_color"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/pay_price_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:maxLines="1"
-                android:textColor="@color/lepay_pay_price_tv_color"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <View
-            style="@style/Divider_HorizontalLine_Style"
-            android:layout_marginLeft="@dimen/margin_default"
-            android:layout_marginRight="@dimen/margin_default" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/pay_channel_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:fadingEdge="none"
-            android:scrollbars="none" />
-
-        <View
-            android:id="@+id/list_bottom_line"
-            style="@style/Divider_HorizontalLine_Style"
-            android:layout_marginLeft="@dimen/margin_default"
-            android:layout_marginRight="@dimen/margin_default" />
-
         <TextView
-            android:id="@+id/pay_cancel_tv"
-            android:layout_width="match_parent"
+            android:id="@+id/pay_price_tv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/lepay_channel_item_selected"
-            android:gravity="center"
-            android:paddingBottom="@dimen/padding_default"
-            android:paddingLeft="@dimen/padding_default"
-            android:paddingRight="@dimen/padding_default"
-            android:paddingTop="@dimen/padding_default"
-            android:textColor="@color/lepay_pay_cancel_tv_color"
-            android:textSize="18sp" />
-
+            android:layout_weight="1"
+            android:gravity="right"
+            android:maxLines="1"
+            android:textColor="@color/lepay_pay_price_tv_color"
+            android:textSize="14sp" />
     </LinearLayout>
 
-    <com.letv.shared.widget.LeLoadingView
-        android:id="@+id/loading"
-        android:layout_width="48dip"
-        android:layout_height="48dip"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-</RelativeLayout>
+    <View
+        style="@style/Divider_HorizontalLine_Style"
+        android:layout_marginLeft="@dimen/margin_default"
+        android:layout_marginRight="@dimen/margin_default" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/pay_channel_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fadingEdge="none"
+        android:scrollbars="none" />
+
+    <View
+        android:id="@+id/list_bottom_line"
+        style="@style/Divider_HorizontalLine_Style"
+        android:layout_marginLeft="@dimen/margin_default"
+        android:layout_marginRight="@dimen/margin_default" />
+
+    <TextView
+        android:id="@+id/pay_cancel_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/lepay_channel_item_selected"
+        android:gravity="center"
+        android:paddingBottom="@dimen/padding_default"
+        android:paddingLeft="@dimen/padding_default"
+        android:paddingRight="@dimen/padding_default"
+        android:paddingTop="@dimen/padding_default"
+        android:textColor="@color/lepay_pay_cancel_tv_color"
+        android:textSize="18sp" />
+
+</LinearLayout>
