143-wallet: Account: 实名认证界面，action bar处的字体显示违和
Ticket: LEUIAPP-1933

Root cause : 未适配我的乐视字体

Solution: 设置fontFamily

Change-Id: Ie9aa7adbdc57ba7dd0bb66965eead414d722da3d
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LePay/res/values/styles.xml
+++ b/LePay/res/values/styles.xml
@@ -105,4 +105,8 @@
         <item name="android:textColor">@color/channel_list_tv_secondary_color</item>
     </style>
 
+    <style name="TextAppearance.LeEcoActionBarTextAppearance" parent="Wallet.TextAppearance">
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+
 </resources>
